test/functions/diten/unresolvedWhere.chpl
proc foo(x) where isIntegral(x) { }
proc foo(x) where isReal(x) { }
foo("bar");
